# nyufoundationsofmachinelearning_project

./: .gitignore  Cross-Asset-Correlation-Analysis_All-Stages_v3.ipynb  README.md  environment.yml.save
bootcamp_BACKUP_20250826175445/: Makefile  README.md
bootcamp_Muhideen_Ogunlowo/: .gitignore  .gitignore.save
bootcamp_Muhideen_Ogunlowo/notebooks/: hw03_python_fundamentals.ipynb  stage09_feature-engineering_homework-starter.ipynb
bootcamp_Muhideen_Ogunlowo/stage03_python_fundamentals/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bootcamp_Muhideen_Ogunlowo/stage03_python_fundamentals/src/: utils.py
bootcamp_Muhideen_Ogunlowo/stage03_python_fundamentals/src/hw03_utils.egg-info/: top_level.txt
bootcamp_Muhideen_Ogunlowo/stage04_data-acquisition-and-ingestion/: .gitignore
bootcamp_Muhideen_Ogunlowo/stage05_data_storage_homework/: README.md
bootcamp_Muhideen_Ogunlowo/stage07_outliers-risk-assumptions/: .gitignore
docs/: stakeholder_memo.md
notebooks/: stage01_cross_asset_correlation_analysis.ipynb  stage09_feature_engineering_homework_starter.ipynb
src/: utils.py
src/hw03_utils.egg-info/: PKG-INFO
stage01_problem-framing-and-scoping_homework-sheet/: README.md
stage03_python_fundamentals/: Makefile
stage03_python_fundamentals/notebooks/: hw03_python_fundamentals.ipynb
stage04_data-acquisition-and-ingestion/: .env.example  README.md  requirements.txt
stage05_data_storage_homework/: .gitignore  requirements.txt
stage05_data_storage_homework/src/: utils.py
stage08_exploratory-data-analysis/: .gitignore  README.md
(+13 files in other folders)
